tests/compile/fail/composite_missing_test_case_parameter.rs
#[hegel::composite]
fn composite_integer_generator(n: i32) -> i32 {
    n
}

fn main() {}
